--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 		  </head>
 		  <body>
 			<div align="center">
-				<h1>YOUR NAME HERE</h1>
+				<h1>Christopher Eun</h1>
 				<h2>Software Developer</h2>
 				<hr>
 				<h3>About Me:</h3>
-					<h4>My hometown is HOMETOWN.</h4>
-					<h4>My favorite color is COLOR.</h4>
-					<h4>My favorite food is FOOD.</h4>
-					<h4>If I could be any animal, I would be A/AN ANIMAL.</h4>
+					<h4>My hometown is New York</h4>
+					<h4>My favorite color is Blue.</h4>
+					<h4>My favorite food is Sushi.</h4>
+					<h4>If I could be any animal, I would be A/AN Owl.</h4>
           <p>Meow! Meow! Meow!</p>
 			</div>
 		  </body>
